bugfix: dodanie z-index aby menu nie chowalo sie w tle

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -71,6 +71,7 @@ body.padding-top {
     padding-top: 5px;
     position: absolute;
     top: 100%;
+    z-index: 100;
 
     .dropdown-menu {
       display: block;
